--- a/templates/retro/index.twig
+++ b/templates/retro/index.twig
@@ -16,11 +16,11 @@
 				
 				<table width="100%" cellspacing="0" cellpadding="0" border="0">
 					<tbody><tr valign="top">
-					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
+					<td style="border-right: 1px dashed #53606c; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
 					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;">Upload</div>
 					Quickly upload and tag content in almost any format.
 					</td>
-					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
+					<td style="border-right: 1px dashed #53606c; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
 					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;">Watch</div>
 					Instantly find and watch fast streaming content.
 					</td>
