--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -33,7 +33,7 @@
 		</div>
 	</div>
 </div>
-<div class="bg-light" style="padding: 15px 10px;">
+<div style="padding: 15px 10px;">
 <h1 style="margin: 0">{{ userpagedata.title }}{% if userpagedata.powerlevel > 1 %}<img class="sdsd" src="assets/icons/shield.svg" height="16" title="User is a moderator.">{% endif %}</h1>
 <div class="grid">
 	<div class="col-4">
