fix user header thing

--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -65,6 +65,11 @@ body {
     border: 1px solid #2a2a2a;
 }
 
+#masthead-below {
+    background: #1f1f1f;
+    border-bottom: 1px solid #282828;
+}
+
 a {
 	color: #ffff00;
 }
