--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -8,8 +8,7 @@ $theme-colors: (
   "info":       $info,
   "warning":    $warning,
   "danger":     $danger,
-  "light":      $light,
-  "dark":       $dark,
+  "neutral":    $gray-900,
   "violet":     $indigo-color,
   "blue-green": $teal-color,
   "aqua": $aqua-color,
