--- a/templates/retro/watch.twig
+++ b/templates/retro/watch.twig
@@ -38,7 +38,7 @@ function CommentHandler()
 		
 		<div class="tableSubTitle">{{ video.title }}</div>
 		<div style="font-size: 13px; font-weight: bold; text-align:center;">
-		<a href="mailto:?subject=Under the Bridge!&amp;body=https://squarebracket.veselcraft.ru/watch.php?v={{ video.video_id }}">Share</a>
+		<a href="mailto:?subject={{ video.title }} on squareBracket&amp;body=https://squarebracket.veselcraft.ru/watch.php?v={{ video.video_id }}">Share</a>
 		// <a href="#comment">Comment</a>
 		</div>
 		
@@ -58,9 +58,7 @@ function CommentHandler()
 			
 								
 					<div class="watchAdded">
-					Added: {{ video.time | date('M j, Y') }} by {{ userlink(video, 'u_') }} //
-					<a href="profile_videos.php?user=jawed">Videos</a> (64) | <a href="profile_favorites.php?user=jawed">Favorites</a> (123) | <a href="profile_friends.php?user=jawed">Friends</a> (16)
-					</div>
+					Added: {{ video.time | date('M j, Y') }} by {{ userlink(video, 'u_') }}					</div>
 			
 					<div class="watchDetails">
 					Views: {{ video.views }} | <a href="#comment">Comments</a>: 8 | Category: {{ video.category_id | category_id_to_name() }}</div>
@@ -85,7 +83,7 @@ function CommentHandler()
 		
 				<div style="font-size: 11px; font-weight: bold; padding: 5px 0px 5px 0px;">Share this video! Copy and paste this link:</div>
 				<div style="font-size: 11px; padding-bottom: 15px;">
-				<input name="video_link" type="text" onclick="javascript:document.linkForm.video_link.focus();document.linkForm.video_link.select();" value="http://www.youtube.com/?v=vy8evhya_9E" size="50" readonly="true" style="font-size: 10px; text-align: center;">
+				<input name="video_link" type="text" onclick="javascript:document.linkForm.video_link.focus();document.linkForm.video_link.select();" value="https://squarebracket.veselcraft.ru/watch.php?v={{ video.video_id }}" size="50" readonly="true" style="font-size: 10px; text-align: center;">
 				</div>
 				
 				</td>
