--- a/assets/scss/embed.scss
+++ b/assets/scss/embed.scss
@@ -3406,6 +3406,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+	color: white;
   }
   .html5-title-logo {
     float: right;
