--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -79,9 +79,9 @@ yt.setConfig({
             "is_html5_mobile_device": false
         },
         "attrs": {
-            "height": "600px",
+            "height": "390px",
             "id": "movie-player",
-            "width": "100%"
+            "width": "640px"
         },
         "url_v9as2": "http:\/\/s.ytimg.com\/yts\/swfbin\/player-vflqv4MLv\/cps.swf",
         "assets": {
