add tabs which FUCKING SUCK

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $pink: #eb44b0;
 $orange: #ff9900;
 $yellow: #ffbf00;
 $cyan: #1778b8;
-$blue: #1b8ade;
+$blue: #1b7fcc;
 $green: #559900;
 $poktube-blue: #0051b3;
 $aqua: #20c997;
@@ -54,7 +54,7 @@ $colors: (
 );
 
 $primary:       $blue;
-$secondary:     $gray-250;
+$secondary:     $gray-100;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
