--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -933,15 +933,16 @@ padding: 0;
 
 .tab {
   overflow: hidden;
+  margin-top: 4px;
 	/* Style the buttons that are used to open the tab content */
 	button {
 	  background-color: inherit;
 	  border: none;
 	  outline: none;
 	  cursor: pointer;
-	  padding: 9px 16px;
+	  padding: 9px 13px;
 	  transition: 0.3s;
-	  border-bottom: 4px solid white;
+	  border-bottom: 3px solid white;
 	  font-weight: bold;
 	  color: #3336;
 }
@@ -949,7 +950,7 @@ padding: 0;
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  border-bottom-color: $danger;
+  border-bottom-color: $gray-600;
   color: #333;
 }
 
@@ -962,6 +963,34 @@ padding: 0;
 /* Style the tab content */
 .tabcontent {
   display: none;
+}
+
+#About {
+line-height: 17px;
+	p {
+	margin: 0;
+	}
+	.description-extra {
+    margin: 10px 0;
+		li {
+			clear: both;
+			margin-bottom: 5px;
+			line-height: 1.2;
+		}
+		.title {
+			float: left;
+			margin: 0 10px 0 0;
+			width: 80px;
+			text-align: right;
+			font-size: 11px;
+			color: #333;
+			font-weight: bold;
+		}
+		.content {
+			color: #999;
+			font-size: 11px;
+		}
+	}
 }
 
 /// Gradients \\\
