--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -12,196 +12,207 @@
 <meta property="twitter:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
 <meta name="twitter:card" content="summary_large_image">
 <script>
-	video_id = '{{ video.video_id }}';
-	user_id = '{{ video.author }}';
+   video_id = '{{ video.video_id }}';
+   user_id = '{{ video.author }}';
 </script>
 <script>
-document.getElementById("defaultOpen").click();
+   document.getElementById("defaultOpen").click();
 </script>
 <link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <div class="watchNext">
-	<div class="grid">
-		<div class="col-8">
-			<div id="container">
-				<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
-				{% if (video.flags b-and 2) %}
-				<div style="background-color: black; color: white; text-align: center; padding: 15rem">
-					{{ __("This video is being processed. Try again later.") }}
-				</div>
-				{% else %}
-				<video id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
-				{% endif %}
-			</div>
-			<script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
-			<script src="https://unpkg.com/plyr@3.6.8/dist/plyr.min.js"></script>
-			<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
-			<!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
-				videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time).
-				we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon
-				-gamerappa, July 31st 2021 -->
-			<style>
-				.plyr--video {
-				--plyr-color-main: #1b8ade;
-				--plyr-font-family: arial, helvetica, sans-serif;
-				--plyr-control-spacing: 10px;
-				}
-				.plyr--video .plyr__controls {
-				padding: 1px 3px !important;
-				background: var(--plyr-video-controls-background,linear-gradient(#292929,#0B0B0B));
-				}
-				.plyr__control svg {
-					fill: #656565;
-				}
-				.plyr__control svg:hover {
-					fill: #CDCDCD;
-				}
-				.plyr--video .plyr__control.plyr__tab-focus, .plyr--video .plyr__control:hover, .plyr--video .plyr__control[aria-expanded="true"] {
-					background: #FFFFFF11;
-					color: var(--plyr-video-control-color-hover,#fff);
-				}
-				.plyr__control--overlaid {
-					background: #fff;
-				}
-				.plyr__controls .plyr__controls__item:first-child {
-					margin-left: 0;
-					margin-right: auto;
-					padding: 6px 19px;
-				}
-			</style>
-			<script>
-				{% if not (video.flags b-and 2) %}
-					//code taken from https://codepen.io/adis0308/pen/bGpQmwr
-					const video = document.getElementById("videoContainer");
-					document.addEventListener("DOMContentLoaded", function(){
-					  const source = "{{ video.videofile }}";
-					  const dash = dashjs.MediaPlayer().create();
-					  var defaultOptions = {
-						"ratio":"16:9",
-					  };
+   <div class="grid">
+      <div class="col-8">
+         <div id="container">
+            <!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
+            {% if (video.flags b-and 2) %}
+            <div style="background-color: black; color: white; text-align: center; padding: 15rem">
+               {{ __("This video is being processed. Try again later.") }}
+            </div>
+            {% else %}
+            <video id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
+            {% endif %}
+         </div>
+         <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
+         <script src="https://unpkg.com/plyr@3.6.8/dist/plyr.min.js"></script>
+         <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
+         <!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
+            videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time).
+            we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon
+            -gamerappa, July 31st 2021 -->
+         <style>
+            .plyr--video {
+            --plyr-color-main: #1b8ade;
+            --plyr-font-family: arial, helvetica, sans-serif;
+            --plyr-control-spacing: 10px;
+            }
+            .plyr--video .plyr__controls {
+            padding: 1px 3px !important;
+            background: var(--plyr-video-controls-background,linear-gradient(#292929,#0B0B0B));
+            }
+            .plyr__control svg {
+            fill: #656565;
+            }
+            .plyr__control svg:hover {
+            fill: #CDCDCD;
+            }
+            .plyr--video .plyr__control.plyr__tab-focus, .plyr--video .plyr__control:hover, .plyr--video .plyr__control[aria-expanded="true"] {
+            background: #FFFFFF11;
+            color: var(--plyr-video-control-color-hover,#fff);
+            }
+            .plyr__control--overlaid {
+            background: #fff;
+            }
+            .plyr__controls .plyr__controls__item:first-child {
+            margin-left: 0;
+            margin-right: auto;
+            padding: 6px 19px;
+            }
+         </style>
+         <script>
+            {% if not (video.flags b-and 2) %}
+            	//code taken from https://codepen.io/adis0308/pen/bGpQmwr
+            	const video = document.getElementById("videoContainer");
+            	document.addEventListener("DOMContentLoaded", function(){
+            	  const source = "{{ video.videofile }}";
+            	  const dash = dashjs.MediaPlayer().create();
+            	  var defaultOptions = {
+            		"ratio":"16:9",
+            	  };
+            
+            	  dash.initialize(video, source, false);
+            	  dash.updateSettings({
+            		streaming: {
+            		  abr: {
+            			autoSwitchBitrate: {audio: false, video: false}
+            		  },
+            		  fastSwitchEnabled: true,
+            		  lowLatencyEnabled: true
+            		}
+            	  });
+            	  dash.on("streamInitialized", function() {
+            		const availableQualities = dash.getBitrateInfoListFor("video").map((l) => l.height);
+            		defaultOptions.quality = {
+            		  default: availableQualities[0].height,
+            		  options: availableQualities,
+            		  forced: true,
+            		  onChange: function (newQuality) {
+            			dash.getBitrateInfoListFor("video").forEach((level, levelIndex) => {
+            			  if (level.height === newQuality) {
+            				dash.setQualityFor("video", level.qualityIndex);
+            			  }
+            			});
+            		  },
+            		};
+            		const player = new Plyr(video, defaultOptions);
+            		window.player = player;
+            		window.dash = dash;
+            	  });
+            	  dash.attachView(video);
+            	});
+            {% endif %}
+         </script>
+         <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
+		                   <h1>{{ video.title }}</h1>
 
-					  dash.initialize(video, source, false);
-					  dash.updateSettings({
-						streaming: {
-						  abr: {
-							autoSwitchBitrate: {audio: false, video: false}
-						  },
-						  fastSwitchEnabled: true,
-						  lowLatencyEnabled: true
-						}
-					  });
-					  dash.on("streamInitialized", function() {
-						const availableQualities = dash.getBitrateInfoListFor("video").map((l) => l.height);
-						defaultOptions.quality = {
-						  default: availableQualities[0].height,
-						  options: availableQualities,
-						  forced: true,
-						  onChange: function (newQuality) {
-							dash.getBitrateInfoListFor("video").forEach((level, levelIndex) => {
-							  if (level.height === newQuality) {
-								dash.setQualityFor("video", level.qualityIndex);
-							  }
-							});
-						  },
-						};
-						const player = new Plyr(video, defaultOptions);
-						window.player = player;
-						window.dash = dash;
-					  });
-					  dash.attachView(video);
-					});
-				{% endif %}
-			</script>
-			<br>
-			<div class="card card-body-fat" style="padding-top:0;">
-			<div class="grid">
-				<div class="col-8">
-					<h1>{{ video.title }}</h1>
-					<img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
-					<a href="user.php?name={{ video.u_name }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a>
-					<br>
-					<button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-					<div class="subscribe-count">{{ subCount }}</div>
-					<br>
-					<div class="button-group">
-						<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary">
-							{{ icon("hand-thumbs-up-fill", 20) }}
-							{{ __("Like") }}
-						</button>
-						<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary tooltip tooltip-top">
-							{{ icon("hand-thumbs-down-fill", 20) }}
-						</button>
-					</div>
-					<button href="#" id="{% if log %}quicklist{% else %}action_unlogged{% endif %}" data-tooltip="Add to Quicklist" class="button button-secondary tooltip tooltip-top">
-						{{ icon("plus-lg", 20) }}
-					</button>
-				</div>
-				<div class="col-4 right">
-				<h1 style="color:#333;font-weight:normal;">{{ video.views }}</h1>
-				<div class="likesaber">
-					<div class="like" style="width:{{ videoRatio}}%"></div>
-				</div>
-				<div style="margin-top: 22px;color:#666666;">{{ icon("hand-thumbs-up-fill", 14) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 14) }} {{ total_dislikes }}  </div>
-					<div class="tab">
-					  <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
-					</div>
-				</div>
-				</div>
-				<div id="About" class="tabcontent">
-					<p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
-					<p>{{ video.description }}</p>
-					<p><b>{{ __("Category:") }}</b> {{ video.category_id | category_id_to_name() }}</b>
-					<p><b>{{ __("License:") }}</b> {{ __("Standard squareBracket License") }}</b>
-				</div>
+            <div class="grid">
+               <div class="col-8">                  <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
+                  <a href="user.php?name={{ video.u_name }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a>
+                  <br>
+                  <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+                  <div class="subscribe-count">{{ subCount }}</div>
+                  <br>
+               </div>
+               <div class="col-4 right">
+                  <h1 style="color:#333;font-weight:normal;margin-bottom: 4px;">{{ video.views }}</h1>
+                  <div class="likesaber">
+                     <div class="like" style="width:{{ videoRatio}}%"></div>
+                  </div>
+                  <div style="margin-top: 16px;color:#666666;">{{ icon("hand-thumbs-up-fill", 14) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 14) }} {{ total_dislikes }}  </div>
+               </div>
+            </div>
+			<div class="grid" style="margin-top:5px;">
+			<div class="col-8">
+			                  <div class="button-group" style="margin-top:-15px;">
+                     <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary">
+                     {{ icon("hand-thumbs-up-fill", 20) }}
+                     {{ __("Like") }}
+                     </button>
+                     <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary tooltip tooltip-top">
+                     {{ icon("hand-thumbs-down-fill", 20) }}
+                     </button>
+                  </div>
 			</div>
-			<div class="card"><div class="card-body-fat">
-			<h3>Comments ({{ comCount }})</h3>
-					<div class="grid" style="gap:0px">
-						<div class="col-1">
-							<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
-						</div>
-						<div class="col-11">
-							<div>
-								<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
-								placeholder="{% if log %}
-								{{ __("Enter comment here, Markdown can be used here.") }}
-								{% else %}
-								{{ __("Please sign in in order to comment.") }}
-								{% endif %}"></textarea>
-							</div>
-					<div class="grid">
-						<div class="col-offset-12">
-							<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
-						</div>
-					</div>
-				</div>
+			<div class="col-4 right">
+			                  <div class="tab">
+                     <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
+                  </div>
 			</div>
-			<div id="comment"></div>
-			{% for comment in comments %}
-			{{ comment(comment) }}
-			{% endfor %}
-		</div></div></div>
-		<div class="col-4">
-			<div class="card">
-				<div class="card-header">
-					<h5>{{ __("Explore More Videos") }}</h5>
-				</div>
-				<div class="card-body">
-					<div class="card">
-						<div class="card-header" id="fromUser">
-							<h5>{{ __("More videos from %s", [video.u_name]) }}</h5>
-						</div>
-						<div class="card-body collapsed" id="fromUserVideoList">
-						</div>
-					</div>
-					{% for related_video in related_videos %}
-					{{ small_video_box(related_video)}}
-					{% endfor %}
-				</div>
 			</div>
+         </div>
+		 <div class="card card-body-fat">
+            <div id="About" class="tabcontent">
+               <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+               <p>{{ video.description }}</p>
+			   <div class="description-extra">
+			   <ul>
+               <li><h4 class="title">{{ __("Category:") }}</h4> <div class="content">{{ video.category_id | category_id_to_name() }}</div></li>
+               <li><h4 class="title">{{ __("License:") }}</h4> <div class="content">{{ __("Standard squareBracket License") }}</div></li>
+			   </ul>
+			   </div>
+            </div>
 		</div>
-	</div>
+         <div class="card">
+            <div class="card-body-fat">
+               <h3>Comments ({{ comCount }})</h3>
+               <div class="grid" style="gap:0px">
+                  <div class="col-1">
+                     <img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
+                  </div>
+                  <div class="col-11">
+                     <div>
+                        <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+                        placeholder="{% if log %}
+                        {{ __("Enter comment here, Markdown can be used here.") }}
+                        {% else %}
+                        {{ __("Please sign in in order to comment.") }}
+                        {% endif %}"></textarea>
+                     </div>
+                     <div class="grid">
+                        <div class="col-offset-12">
+                           <button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div id="comment"></div>
+               {% for comment in comments %}
+               {{ comment(comment) }}
+               {% endfor %}
+            </div>
+         </div>
+      </div>
+      <div class="col-4">
+         <div class="card">
+            <div class="card-header">
+               <h5>{{ __("Explore More Videos") }}</h5>
+            </div>
+            <div class="card-body">
+               <div class="card">
+                  <div class="card-header" id="fromUser">
+                     <h5>{{ __("More videos from %s", [video.u_name]) }}</h5>
+                  </div>
+                  <div class="card-body collapsed" id="fromUserVideoList">
+                  </div>
+               </div>
+               {% for related_video in related_videos %}
+               {{ small_video_box(related_video)}}
+               {% endfor %}
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
 {% endblock %}
